--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "serve-static": "^1.13.2",
     "socket.io": "^2.1.0"
   },
   "devDependencies": {
